kubernetes/react-ingress.yaml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:

 name: react-ingress 
 namespace: react-helm 

 annotations:

   nginx.ingress.kubernetes.io/rewrite-target: /$2

spec:

 rules:

 - http:

     paths:

     - pathType: Prefix

       path: /react

       backend:

         service:

           name: react-service

           port:

             number: 8080
